--- a/fauzy.html
+++ b/fauzy.html
@@ -110,3 +110,30 @@
     <script src="assets/bootstrap-5.0.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+<div class="row"  >
+  <div class="col-lg-6">
+    <img src="assets/images/profile.png" alt="" style="width: 300px; height: 300px;margin-right: 200px;margin-bottom: 100px; ">
+  </div>
+  <div class="col-lg-6">
+    <br>
+    
+    <div class="card " style="opacity: 0.8; width: 18rem; background-color:darkslateblue ; border-radius: 50px; ">
+        <div class="card-body">
+          <div class="row">
+            <h2 class="card-title"> Vick Mwendwa</h2>
+            <p class="card-text">I am a Web Designer</p> 
+          </div>
+          <br>
+  
+          <div class="row">
+            <div class="c0l-lg-4"><i class="fa fa-instagram" aria-hidden="true">_VICK_02_</i></div>
+            <br>
+            <div class="c0l-lg-4"><i class="fa fa-whatsapp" aria-hidden="true">0752017659</i></div>
+            <br>
+            <div class="c0l-lg-4"><i class="fab fa-twitter">patrick_victor</i></div>
+            <br>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
