--- a/fauzy.html
+++ b/fauzy.html
@@ -101,7 +101,14 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
+  <!-- The social media icon bar -->
+<div class="icon-bar">
+  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+  <a href="#" class="google"><i class="fa fa-google"></i></a>
+  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+  <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+</div>
     <!-- JQUERY -->
     <script src="assets/bootstrap-5.0.1-dist/js/jquery-3.6.0.min.js"></script>
     <!-- popper js -->
