--- a/contact.html
+++ b/contact.html
@@ -43,24 +43,7 @@
     <a data-aos="zoom-in-left" data-aos-delay="1300" href="appointment/appointment.html" class="btn">contact Us</a>
 
 </header>
-
-<!-- Banner section starts-->
-<div class="banner">
-
-    <div class="content" data-aos="zoom-in-up" data-aos-delay="300">
-        <nav style="color: white; float: left; --bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="Index.html">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Library</li>
-            </ol>
-          </nav>
-        <span>start your Healing journey with us</span>
-        <h3>God is the Healer</h3>
-        <p>Welcome to a preferred faith-based health care facility that exceeds the needs and expectations of our society.</p>
-    </div>
-
-</div>
-    <section class="contact-sec">
+<body id="body">
     <div class="contact-section">
         <div class="contact-info">
   
@@ -82,11 +65,7 @@
           </form>
         </div>
       </div>
-</section>
-
-<!-- banner section ends -->
-
-<!-- footer section starts  -->
+</body>
 
 <section class="footer" style="background-color:#080357 ;">
 
