--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <section class="book-form" id="book-form">
 
-    <form action="https://formsubmit.co/info@odilias.co.ke" method="POST">
+    <form action="https://formsubmit.co/customercare@odilias.co.ke" method="POST">
         <input type="hidden" name="_subject" value="Appointment!">
         <input type="text" name="_honey" style="display:none">
         <input type="hidden" name="_captcha" value="false">
@@ -223,7 +223,7 @@
         <div class="box blogBox" data-aos="zoom-in-up" data-aos-delay="450">
             <i class="fas fa-tooth"></i>
             <h3>Dental</h3>
-            <p>We  offers a wide range of services for both adults and to children including full range of  General Dentistry, Cosmetic Dentistry(gold & silver crown), Orthodontics Dentistry (Braces),Paediatric Dentistry,(Pulpectomy)Restorative Dentistry(Filling ,Root Canal ),Prosthetic Dentistry(Dentures ,Crown and Bridge )and Preventive Dentistry (Fluoride Therapy ),Open and Closed Disimpaction  , Full mouth scaling, locked  jaw reduction, Splinting ,Minor oral surgery and Dental X-ray. 
+            <p>We  offer a wide range of services for both adults and to children including full range of  General Dentistry, Cosmetic Dentistry(gold & silver crown), Orthodontics Dentistry (Braces),Paediatric Dentistry,(Pulpectomy)Restorative Dentistry(Filling ,Root Canal ),Prosthetic Dentistry(Dentures ,Crown and Bridge )and Preventive Dentistry (Fluoride Therapy ),Open and Closed Disimpaction  , Full mouth scaling, locked  jaw reduction, Splinting ,Minor oral surgery and Dental X-ray. 
             </p>
             <a class="btn" href="#book-form">Book now</a>
         </div>
