--- a/index.html
+++ b/index.html
@@ -79,15 +79,12 @@
         <input type="hidden" name="_captcha" value="false">
         <div data-aos="zoom-in" data-aos-delay="150" class="inputBox">
             <span>Which clinic?</span>
-            <input type="text"name="_subject" placeholder="clinic name" value="">
+            <input type="text"name="name" placeholder="clinic name" value="">
         </div>
-        <div data-aos="zoom-in" data-aos-delay="300" class="inputBox">
-            <span>when?</span>
-            <input type="datetime-local" name="_subject" placeholder="date & time" value="">
-        </div>
+       
         <div data-aos="zoom-in" data-aos-delay="450" class="inputBox">
-            <span>phone number or email?</span>
-            <input type="tel" name="_subject"  placeholder="phone number" value="">
+            <span> email?</span>
+            <input type="tel" name="email"  placeholder="email" value="">
         </div>
         <input data-aos="zoom-in" data-aos-delay="600" type="submit" value="send" class="btn">
     </form>
