--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a data-aos="zoom-in-left" data-aos-delay="1150" href="#blogs">news</a>
     </nav>
 
-    <a data-aos="zoom-in-left" data-aos-delay="1300" href="/contact us/contact.html" class="btn">contact Us</a>
+    <a data-aos="zoom-in-left" data-aos-delay="1300" href="contact us/contact.html" class="btn">contact Us</a>
 
 </header>
 
