--- a/gallery.html
+++ b/gallery.html
@@ -158,8 +158,10 @@
         <div class="box" data-aos="fade-up" data-aos-delay="600">
             <h3>newsletter</h3>
             <p>subscribe for latest updates</p>
-            <form action="https://formsubmit.co/victormwendwa2002@gmail.com" method="POST">
-                <input type="email" name="" placeholder="enter your email" class="email" id="">
+            <form action="https://formsubmit.co/info@odilias.co.ke" method="POST">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_subject" value="Newsletter subscription!">
+                <input type="email" name="email" placeholder="enter your email" class="email" id="">
                 <input type="submit" value="subscribe" class="btn">
             </form>
         </div>
