--- a/contact.html
+++ b/contact.html
@@ -113,16 +113,17 @@
             </div>
             <div class="right-side">
               <div class="topic-text">Send us a message</div>
-            <form  action="https://formsubmit.co/victormwendwa2002@gmail.com" method="POST">
+            <form  action="https://formsubmit.co/info@odilias.co.ke" method="POST">
+                <input type="hidden" name="_subject" value="Newsletter subscription!">
               <input type="hidden" name="_captcha" value="false">
               <div class="input-box">
-                <input type="text" placeholder="Enter your name">
+                <input type="text" name="name" placeholder="Enter your name">
               </div>
               <div class="input-box">
-                <input type="text" placeholder="Enter your email">
+                <input type="text" placeholder="Enter your email" name="reply to" required>
               </div>
-              <div class="input-box message-box">
-                   <textarea placeholder="enter your message"></textarea>
+              <div class="input-box message-box" >
+                   <textarea placeholder="enter your message" name="message"></textarea>
               </div>
               <div class="button">
                 <button type="submit" class="btn btn-sm btn-dark " >Send <i class="fas fa-chevron-circle-right"></i></button>
@@ -171,8 +172,10 @@
         <div class="box" data-aos="fade-up" data-aos-delay="600">
             <h3>newsletter</h3>
             <p>subscribe for latest updates</p>
-            <form action="https://formsubmit.co/victormwendwa2002@gmail.com" method="POST">
-                <input type="email" name="" placeholder="enter your email" class="email" id="">
+            <form action="https://formsubmit.co/info@odilias.co.ke" method="POST">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_subject" value="Newsletter subscription!">
+                <input type="email" name="email" placeholder="enter your email" class="email" id="">
                 <input type="submit" value="subscribe" class="btn">
             </form>
         </div>
