--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
             <div class="right-side">
               <div class="topic-text">Send us a message</div>
             <form  action="https://formsubmit.co/info@odilias.co.ke" method="POST">
-                <input type="hidden" name="_subject" value="Newsletter subscription!">
+                <input type="hidden" name="_subject" value="Enquiry!">
               <input type="hidden" name="_captcha" value="false">
               <div class="input-box">
                 <input type="text" name="name" placeholder="Enter your name">
