--- a/index.html
+++ b/index.html
@@ -82,10 +82,13 @@
             <span>Which clinic?</span>
             <input type="text"name="name" placeholder="clinic name" value="">
         </div>
-       
+        <div data-aos="zoom-in" data-aos-delay="150" class="inputBox">
+            <span>Which date?</span>
+            <input type="datetime-local"name="message" placeholder="date/time" value="">
+        </div>
         <div data-aos="zoom-in" data-aos-delay="450" class="inputBox">
             <span> email?</span>
-            <input type="tel" name="email"  placeholder="email" value="">
+            <input type="email" name="email"  placeholder="email" value="" required>
         </div>
         <input data-aos="zoom-in" data-aos-delay="600" type="submit" value="send" class="btn">
     </form>
